--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -21,6 +21,12 @@
     <td>{{owner}}</td>
   </tr>
 </table>
+
+<div class="well well-sm" ng-repeat="note in notes | orderBy: '-Modified'">
+  <div><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}</div>
+  <div>{{note.Body}}</div>
+</div>
+
 <a class="btn btn-danger" href="{{url}}">Open in Dynamics CRM</a>
 </div>
 
