stub for add note, more fields

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -1,6 +1,10 @@
 <div ng-show="loaded">
 <table class="table table-condensed table-striped">
   <tr>
+    <th>ID:</th>
+    <td>{{id}}</td>
+  </tr>
+  <tr>
     <th>Incident Number:</th>
     <td>{{incidentNumber}}</td>
   </tr>
@@ -19,6 +23,10 @@
   <tr>
     <th>Owner:</th>
     <td>{{owner}}</td>
+  </tr>
+  <tr>
+    <th>Attachments Folder:</th>
+    <td>{{caseAttachments}}</td>
   </tr>
 </table>
 
