Markdown in comment formatting because... yes!

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -61,8 +61,8 @@
 </div>
 
 <div class="well well-sm" ng-repeat="note in notes | orderBy: '-Modified'">
-  <div><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}</div>
-  <div>{{note.Body}}</div>
+  <div style="border-bottom: 1px solid #aaa;"><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}</div>
+  <div ng-bind-html="note.Body | marked"></div>
   <div ng-show="note.Filename">Download attachment (new tab): {{note.Filename}} ({{note.Filesize}} Bytes) <a class="btn btn-default" href={{"../attachment/getfile/"+note.Id+"/"+note.Filename}} target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
   <div ng-show="note.Filename">Download attachment (iframe): {{note.Filename}} ({{note.Filesize}} Bytes) <button class="btn btn-default" ng-click="downloadNoteAttachment(note.Id, note.Filename)"><span class="glyphicon glyphicon-download-alt"></span></button></div>
 </div>
