--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -5,20 +5,35 @@
     <td>{{id}}</td>
   </tr>
   <tr>
-    <th>Incident Number:</th>
-    <td>{{incidentNumber}}</td>
+    <th>Number:</th>
+    <td>{{incidentNumber}}
+<a class="pull-right btn btn-danger btn-xs" href="{{url}}">Open in Dynamics CRM</a>
+</div>
+    </td>
   </tr>
   <tr>
     <th>Title:</th>
     <td>{{title}}</td>
   </tr>
   <tr>
+    <th>Status:</th>
+    <td>{{status}}</td>
+  </tr>
+  <tr>
     <th>Description:</th>
     <td>{{description}}</td>
   </tr>
   <tr>
+    <th>Version:</th>
+    <td>{{version}}</td>
+  </tr>
+  <tr>
     <th>Company:</th>
     <td>{{company}}</td>
+  </tr>
+  <tr>
+    <th>Creator:</th>
+    <td>{{creator}}</td>
   </tr>
   <tr>
     <th>Owner:</th>
@@ -35,12 +50,14 @@
       <tr>
         <th>Filename</th>
         <th>Size (kb)</th>
+        <th>Owner</th>
         <th>Modified</th>
         <th>Created</th>
       </tr>
       <tr ng-repeat="attachment in attachments | orderBy: '-ModifiedDate'">
         <td><a href="../incident/{{incidentNumber}}/attachments/{{attachment.Filename}}">{{attachment.Filename}}</a></td>
         <td>{{attachment.SizeKB}}</td>
+        <td>{{attachment.Owner}}</td>
         <td>{{attachment.Modified | date: "medium"}}</td>
         <td>{{attachment.Created | date: "medium"}}</td>
       </tr>
@@ -67,8 +84,6 @@
   <div ng-show="note.Filename">Download attachment (iframe): {{note.Filename}} ({{note.Filesize}} Bytes) <button class="btn btn-default" ng-click="downloadNoteAttachment(note.Id, note.Filename)"><span class="glyphicon glyphicon-download-alt"></span></button></div>
 </div>
 
-<a class="btn btn-danger" href="{{url}}">Open in Dynamics CRM</a>
-</div>
 
 <p class="alert alert-info" ng-hide="loaded">Loading!</p>
 
