made CRM button less terrifying

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -7,7 +7,7 @@
   <tr>
     <th>Number:</th>
     <td>{{incidentNumber}}
-<a class="pull-right btn btn-danger btn-xs" href="{{url}}">Open in Dynamics CRM</a>
+<a class="pull-right btn btn-default btn-xs" href="{{url}}">Open in Dynamics CRM</a>
 </div>
     </td>
   </tr>
