--- a/server/static/templates/index.html
+++ b/server/static/templates/index.html
@@ -1,3 +1,5 @@
 <div class="jumbotron">
-<p>{{message}}</p>
+  <form ng-submit="go()">
+ <input class="form-control" type="text" ng-model="incidentNumber" placeholder="Incident Number (ie. CAS-05163-D0W1N2)">
+ </form>
 </div>
