--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -1,10 +1,11 @@
 <div ng-show="loaded && !error">
-<table class="table table-condensed table-striped">
-  <tr>
+<div class="panel panel-default">
+<table class="table table-condensed">
+<!--   <tr>
     <th>ID:</th>
     <td>{{incident.Id}}</td>
   </tr>
-  <tr>
+ -->  <tr>
     <th>Number:</th>
     <td>{{incidentNumber}} <a class="pull-right btn btn-default btn-xs" href="{{url}}">Open in Dynamics CRM</a> </td>
   </tr>
@@ -40,28 +41,27 @@
     <th>Attachments Folder:</th>
     <td>{{incident.NetworkAttachmentsFolder}}</td>
   </tr>
-  <tr ng-show="incident.NetworkAttachments">
-    <th>Attachments:</th>
-    <td>
-      <table class="table table-condensed">
-      <tr>
-        <th>Filename</th>
-        <th>Size (kb)</th>
-        <th>Owner</th>
-        <th>Modified</th>
-        <th>Created</th>
-      </tr>
-      <tr ng-repeat="attachment in incident.NetworkAttachments | orderBy: '-ModifiedDate'">
-        <td><a href="../incident/{{incidentNumber}}/attachments/{{attachment.Filename}}">{{attachment.Filename}}</a></td>
-        <td>{{attachment.SizeKB}}</td>
-        <td>{{attachment.Owner}}</td>
-        <td>{{attachment.Modified | date: "medium"}}</td>
-        <td>{{attachment.Created | date: "medium"}}</td>
-      </tr>
-      </table>
-    </td>
-  </tr>
 </table>
+</div>
+
+<div class="panel panel-default">
+<table class="table table-condensed table-striped" ng-show="incident.NetworkAttachments">
+<tr>
+  <th>Filename</th>
+  <th>Size (kb)</th>
+  <th>Owner</th>
+  <th>Modified</th>
+  <th>Created</th>
+</tr>
+<tr ng-repeat="attachment in incident.NetworkAttachments | orderBy: '-ModifiedDate'">
+  <td><a href="../incident/{{incidentNumber}}/attachments/{{attachment.Filename}}">{{attachment.Filename}}</a></td>
+  <td>{{attachment.SizeKB}}</td>
+  <td>{{attachment.Owner}}</td>
+  <td>{{attachment.Modified | date: "medium"}}</td>
+  <td>{{attachment.Created | date: "medium"}}</td>
+</tr>
+</table>
+</div>
 
 <div class="well well-sm" ng-hide="commentPosting">
   <input type="text" class="form-control" ng-model="newCommentTitle" placeholder="New Comment Title">
