--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -64,8 +64,8 @@
 </div>
 
 <div class="well well-sm" ng-hide="commentPosting">
-  <input type="text" class="form-control" ng-model="newCommentTitle" placeholder="New Comment Title">
-  <textarea class="form-control" ng-model="newCommentBody" placeholder="New Comment Body">
+  <input type="text" class="form-control" ng-model="newCommentTitle" placeholder="Note Title">
+  <textarea class="form-control" ng-model="newCommentBody" placeholder="Note Body">
   </textarea>
   <button class="btn btn-default" ng-click="addComment()">Add Note</button>
 </div>
