reorg + stubs for note operations

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -22,8 +22,8 @@
     <td>{{incident.Description}}</td>
   </tr>
   <tr>
-    <th>Version:</th>
-    <td>{{incident.Version}}</td>
+    <th>VersionRequest:</th>
+    <td>{{incident.VersionRequest}}</td>
   </tr>
   <tr>
     <th>Company:</th>
