--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -1,4 +1,3 @@
-<p class="alert alert-warning" ng-hide="isLoggedIn()">Not Authenticated</p>
 <div ng-show="loaded && !error">
 <div class="panel panel-default">
 <table class="table table-condensed">
@@ -68,7 +67,7 @@
   <input type="text" class="form-control" ng-model="newCommentTitle" placeholder="Note Title">
   <textarea class="form-control" ng-model="newCommentBody" placeholder="Note Body">
   </textarea>
-  <button class="btn btn-default" ng-click="addComment()">Add Note</button>
+  <button class="btn btn-default" ng-click="addNote()">Add Note</button>
 </div>
 
 <div class="well well-sm" ng-show="commentPosting">
@@ -76,7 +75,8 @@
 </div>
 
 <div class="well well-sm" ng-repeat="note in incident.Notes | orderBy: '-Modified'">
-  <div style="border-bottom: 1px solid #aaa;"><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}</div>
+  <div style="border-bottom: 1px solid #aaa;"><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}
+  </div>
   <div ng-bind-html="note.Body | marked"></div>
   <div ng-show="note.Filename">Download attachment (new tab): {{note.Filename}} ({{note.Filesize}} Bytes) <a class="btn btn-default" href={{"../attachment/getfile/"+note.Id+"/"+note.Filename}} target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
   <div ng-show="note.Filename">Download attachment (iframe): {{note.Filename}} ({{note.Filesize}} Bytes) <button class="btn btn-default" ng-click="downloadNoteAttachment(note.Id, note.Filename)"><span class="glyphicon glyphicon-download-alt"></span></button></div>
