--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -70,7 +70,7 @@
   <button class="btn btn-default" ng-click="addNote()">Add Note</button>
 </div>
 
-<div class="well well-sm" ng-show="commentPosting">
+<div class="alert alert-danger" ng-show="commentPosting">
   Posting...
 </div>
 
