part of a search and new fiedls

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -14,6 +14,10 @@
     <td>{{incident.Title}}</td>
   </tr>
   <tr>
+    <th class="nowrap">Created On:</th>
+    <td>{{incident.CreatedOn | date: "medium"}}</td>
+  </tr>
+  <tr>
     <th class="nowrap">Status:</th>
     <td>{{incident.Status}}</td>
   </tr>
