--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -7,7 +7,7 @@
   </tr>
  -->  <tr>
     <th class="nowrap">Number:</th>
-    <td>{{incidentNumber}} <a class="pull-right btn btn-default btn-xs" href="{{incident.Url}}">Open in Dynamics CRM</a> </td>
+    <td>{{incidentNumber}} <a class="pull-right" href="{{incident.Url}}">Open in Dynamics CRM</a> </td>
   </tr>
   <tr>
     <th class="nowrap">Title:</th>
