--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -83,7 +83,7 @@
 
 <div class="well well-sm" ng-hide="commentPosting || !isLoggedIn()">
   <input type="text" class="form-control" ng-model="newCommentTitle" placeholder="Note Title">
-  <textarea class="form-control" ng-model="newCommentBody" placeholder="Note Body">
+  <textarea autogrow class="form-control" ng-model="newCommentBody" placeholder="Note Body">
   </textarea>
   <button class="btn btn-default" ng-click="addNote()">Add Note</button>
 </div>
@@ -98,7 +98,7 @@
     <a class="pull-right" ng-show="isLoggedIn()" ng-click="deleteNote(note)"><i class="glyphicon glyphicon-trash"></i></a>
         <a class="pull-right" ng-show="isLoggedIn()" ng-click="toggleEditMode(note)"><i class="glyphicon glyphicon-edit"></i></a>
     </div>
-    <textarea class="form-control" ng-show="note.isEditMode" ng-model=note.Body></textarea>
+    <textarea autogrow class="form-control" ng-show="note.isEditMode" ng-model=note.Body></textarea>
       <button class="btn btn-default" ng-show="note.isEditMode && !note.isUpdating" ng-click="updateNote(note)">Update Note</button>
     <div ng-bind-html="note.Body | crmify | marked" ng-show="!note.isEditMode"></div>
     <div ng-show="note.Filename">Download attachment (new tab): {{note.Filename}} ({{note.Filesize}} Bytes) <a class="btn btn-default" href={{"../attachment/getfile/"+note.Id+"/"+note.Filename}} target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
