--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -1,4 +1,4 @@
-<div ng-show="loaded && !error">
+<div class="container" ng-show="loaded && !error">
 <div class="panel panel-default">
 <table class="table table-condensed">
 <!--   <tr>
