--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -12,7 +12,9 @@
         border: 5px dashed blue;
     }
 </style>
-<div ng-show="loaded && !error">
+<div ng-show="loaded && !error" ngf-drop="uploadFiles($files)"
+  ngf-drag-over-class="'dragover'" ngf-multiple="true">
+<div class="container" >
 <div class="panel panel-default">
 <table class="table table-condensed">
 <!--   <tr>
@@ -76,15 +78,13 @@
 </table>
 </div>
 
-<div class="panel panel-default" ngf-drop="uploadFiles($files)"
-  ngf-drag-over-class="'dragover'" ngf-multiple="true">
-<button class="btn btn-default" ngf-select="uploadFiles($files)" ngf-multiple="true">Add Files</button>
 <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
 <div ng-hide="!uploadInProgress" class="progress">
   <div class="progress-bar  progress-bar-striped active" ng-style="{width: uploadProgressPercent + '%'}">
   </div>
 </div>
-<table class="table table-condensed table-striped" ng-show="incident.NetworkAttachments">
+<div class="panel panel-default" ng-show="incident.NetworkAttachments">
+<table class="table table-condensed table-striped">
 <tr>
   <th>Filename</th>
   <th>Size (kb)</th>
@@ -128,6 +128,7 @@
   <div class="alert alert-danger" ng-show="note.doomed">Note is being obliterated</div>
 </div>
 
+</div>
 </div>
 
 <p ng-hide="loaded">
