Ticket's "Open in Dynamics" link now opens in a new tab.

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -23,7 +23,7 @@
   </tr>
  -->  <tr>
     <th class="nowrap">Number:</th>
-    <td>{{incidentNumber}} <a class="pull-right" href="{{incident.Url}}">Open in Dynamics CRM</a> </td>
+    <td>{{incidentNumber}} <a class="pull-right" href="{{incident.Url}}" target="_blank">Open in Dynamics CRM</a> </td>
   </tr>
   <tr>
     <th class="nowrap">Title:</th>
