--- a/server/static/templates/index.html
+++ b/server/static/templates/index.html
@@ -1,5 +1,1 @@
-<div class="jumbotron">
-  <form ng-submit="go()">
- <input class="form-control" type="text" ng-model="incidentNumber" placeholder="Incident Number (ie. CAS-05163-D0W1N2)">
- </form>
-</div>
+Nothing here
