--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -121,10 +121,10 @@
 </div>
 
 <div ng-repeat="note in incident.Notes | orderBy: '-Modified'">
-  <div class="well well-sm" ng-hide="note.doomed">
+  <div class="well well-sm noteType-{{note.NoteType}}" ng-hide="note.doomed">
     <div style="border-bottom: 1px solid #aaa;"><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}
-    <a class="pull-right" ng-show="isLoggedIn()" ng-click="deleteNote(note)"><i class="glyphicon glyphicon-trash"></i></a>
-        <a class="pull-right" ng-show="isLoggedIn()" ng-click="toggleEditMode(note)"><i class="glyphicon glyphicon-edit"></i></a>
+    <a class="pull-right" ng-show="isLoggedIn() && note.Editable" ng-click="deleteNote(note)"><i class="glyphicon glyphicon-trash"></i></a>
+        <a class="pull-right" ng-show="isLoggedIn() && note.Editable" ng-click="toggleEditMode(note)"><i class="glyphicon glyphicon-edit"></i></a>
     </div>
     <textarea autogrow class="form-control" ng-show="note.isEditMode" ng-model=note.Body></textarea>
       <button class="btn btn-default" ng-show="note.isEditMode && !note.isUpdating" ng-click="updateNote(note)">Update Note</button>
