--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -100,7 +100,9 @@
   <th>Created</th>
 </tr>
 <tr ng-repeat="attachment in incident.NetworkAttachments | orderBy: '-ModifiedDate'">
-  <td><a href="../incident/{{incidentNumber}}/attachments/{{attachment.Filename | escape}}">{{attachment.Filename}}</a></td>
+  <td>
+  <a ng-click="downloadFile(incident, attachment)">{{attachment.Filename}}</a>
+  </td>
   <td>{{attachment.SizeKB}}</td>
   <td>{{attachment.Owner}}</td>
   <td>{{attachment.Modified | date: "medium"}}</td>
