--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -123,7 +123,11 @@
 </div>
 
 <div ng-repeat="note in incident.Notes | orderBy: '-Modified'">
-  <div class="well well-sm noteType-{{note.NoteType}}" ng-hide="note.doomed">
+
+  <div class="well well-sm noteType-{{note.NoteType}}" ng-hide="note.doomed || note.NoteType != 'AutomaticPost'">
+    <div ><b>{{note.Body}}</b> on {{note.Modified | date : "medium"}}</div>
+  </div>
+  <div class="well well-sm noteType-{{note.NoteType}}" ng-hide="note.doomed || note.NoteType == 'AutomaticPost'">
     <div style="border-bottom: 1px solid #aaa;"><b>{{note.Title}}</b> by <i>{{note.Owner}}</i> on {{note.Modified | date : "medium"}}
     <a class="pull-right" ng-show="isLoggedIn() && note.Editable" ng-click="deleteNote(note)"><i class="glyphicon glyphicon-trash"></i></a>
         <a class="pull-right" ng-show="isLoggedIn() && note.Editable" ng-click="toggleEditMode(note)"><i class="glyphicon glyphicon-edit"></i></a>
@@ -134,6 +138,7 @@
     <div ng-show="note.Filename">Download attachment (new tab): {{note.Filename}} ({{note.Filesize}} Bytes) <a class="btn btn-default" href={{"../attachment/getfile/"+note.Id+"/"+note.Filename}} target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
     <div ng-show="note.Filename">Download attachment (iframe): {{note.Filename}} ({{note.Filesize}} Bytes) <button class="btn btn-default" ng-click="downloadNoteAttachment(note.Id, note.Filename)"><span class="glyphicon glyphicon-download-alt"></span></button></div>
   </div>
+
   <div class="alert alert-danger" ng-show="note.doomed">Note is being obliterated</div>
 </div>
 
