--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -47,7 +47,7 @@
   </tr>
   <tr>
     <th class="nowrap">Version:</th>
-    <td>{{incident.VersionRequest}}</td>
+    <td>{{incident.Version}}</td>
   </tr>
   <tr>
     <th class="nowrap">Company:</th>
