turned off markdown for description and notes until we can make it safe for formatting things with punctuation.

--- a/server/static/templates/incident.html
+++ b/server/static/templates/incident.html
@@ -57,7 +57,7 @@
   </tr>
   <tr>
     <th class="nowrap">Description:</th>
-    <td ng-bind-html="incident.Description | crmify | tfsify | marked"></td>
+    <td ng-bind="incident.Description | crmify | tfsify"></td>
   </tr>
   <tr>
     <th class="nowrap">Version:</th>
@@ -145,7 +145,7 @@
     </div>
     <textarea autogrow class="form-control" ng-show="note.isEditMode" ng-model=note.Body></textarea>
       <button class="btn btn-default" ng-show="note.isEditMode && !note.isUpdating" ng-click="updateNote(note)">Update Note</button>
-    <div ng-bind-html="note.Body | crmify | tfsify | marked" ng-show="!note.isEditMode"></div>
+    <div ng-bind="note.Body | crmify | tfsify" ng-show="!note.isEditMode"></div>
     <div ng-show="note.Filename">Download attachment (new tab): {{note.Filename}} ({{note.Filesize}} Bytes) <a class="btn btn-default" href={{"../attachment/getfile/"+note.Id+"/"+note.Filename}} target="_blank"><span class="glyphicon glyphicon-download-alt"></span></a></div>
     <div ng-show="note.Filename">Download attachment (iframe): {{note.Filename}} ({{note.Filesize}} Bytes) <button class="btn btn-default" ng-click="downloadNoteAttachment(note.Id, note.Filename)"><span class="glyphicon glyphicon-download-alt"></span></button></div>
   </div>
