--- a/server/static/templates/search.html
+++ b/server/static/templates/search.html
@@ -56,7 +56,7 @@
       <td>{{ticket.Company}}</td>
       <td>{{ticket.Version}}</td>
       <td>{{ticket.Owner}}</td>
-      <td ng-bind-html="ticket.Description | crmify | tfsify | marked"></td>
+      <td ng-bind-html="ticket.Description | escapeAndLink"></td>
     </tr>
   </table>
 </div>
